--- a/training/deepseed-falcon-180b-lora-fa.ipynb
+++ b/training/deepseed-falcon-180b-lora-fa.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fine-tune Falcon 180B using DeepSpeed, Hugging Face Transformers & LoRA\n",
+    "# Fine-tune Falcon 180B with DeepSpeed ZeRO, LoRA & Flash Attention\n",
     "\n",
     "Falcon 180B is the newest version of Falcon LLM family. It is the biggest open source model with 180B parameter and trained on more data - 3.5T tokens with context length window upto 4K tokens. In this example we will show how to fine-tune Falcon 180B using DeepSpeed, Hugging Face Transformers, LoRA with Flash Attention on a multi-GPU machine.\n",
     "\n",
@@ -14,6 +14,21 @@
     "2. Load and prepare the dataset\n",
     "3. Fine-Tune Falcon 180B using DeepSpeed, Hugging Face Transformers, LoRA with Flash Attention\n",
     "\n",
+    "Before we get into the code lets take a quick look on the technologies and methods we are going to use: \n",
+    "\n",
+    "### What is DeepSpeed ZeRO?\n",
+    "\n",
+    "DeepSpeed ZeRO focuses on efficient large-scale training of Transformers. ZeRO, or Zero Redundancy Optimizer, reduces memory footprint by partitioning model states across devices instead of basic data parallelism. This saves significant memory - ZeRO-Infinity can reduce usage 100x vs data parallelism. ZeRO-Offload further reduces memory by offloading parts of model and optimizer to CPU, enabling 10B+ parameter models on 1 GPU. ZeRO [integrates with HuggingFace Transformers through a configuration file](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/deepspeed).\n",
+    "\n",
+    "### What is LoRA?\n",
+    "\n",
+    "[LoRA](https://arxiv.org/abs/2106.09685) enables efficient fine-tuning of large language models. It decomposes weight matrices into smaller, trainable update matrices that adapt while keeping original weights frozen. This drastically reduces trainable parameters for faster, lower-memory tuning. LoRA integrates into [Transformers via Hugging Face's PEFT](https://huggingface.co/docs/peft/conceptual_guides/lora). It combines well with methods like DeepSpeed. Key advantages are efficient tuning, portable models, and no inference latency when merging trained weights. LoRA allows adaptively training massive models with limited resources.\n",
+    "\n",
+    "### What is Flash Attention?\n",
+    "\n",
+    "Flash Attention is an algorithm that speeds up the core attention mechanism in Transformer language models by restructuring computations. It uses techniques like tiling and recomputation to reduce the high memory costs of attention, enabling models to process longer text sequences. Flash Attention 2 optimizes parallelism and work partitioning for 2x speedup over the previous version, reaching 230 TFLOPS/s on A100 GPUs.\n",
+    "\n",
+    "\n",
     "### Access Falcon 180B \n",
     "\n",
     "Before we can start training we have to make sure that we accepted the license [tiiuae/falcon-180B](https://huggingface.co/tiiuae/falcon-180B) to be able to use it. You can accept the license by clicking on the Agree and access repository button on the model page at: \n",
@@ -21,19 +36,21 @@
     "\n",
     "> The example was created and run a DGX A100 8-GPU machine with 80GB GPU memory per GPU.\n",
     "\n",
-    "## 1. Setup Development Environment"
+    "## 1. Setup Development Environment\n",
+    "\n",
+    "conda create --name hf python=3.10 -c conda-forge\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# install torch with the correct cuda version, check nvcc --version\n",
     "!pip install torch --extra-index-url https://download.pytorch.org/whl/cu118 --upgrade\n",
     "# install Hugging Face Libraries and additional dependencies\n",
-    "!pip install \"transformers==4.33.1\" \"datasets==2.14.5\" \"accelerate==0.22.0\" \"evaluate==0.4.0\" tensorboard packaging --upgrade\n",
+    "!pip install \"transformers==4.33.1\" \"datasets==2.14.5\" \"accelerate==0.22.0\" \"evaluate==0.4.0\" \"peft==0.5.0\" tensorboard packaging --upgrade\n",
     "# install deepspeed and ninja for jit compilations of kernels\n",
     "!pip install \"deepspeed==0.10.3\" ninja --upgrade\n",
     "# install additional Flash Attention\n",
@@ -89,7 +106,7 @@
     "\n",
     "print(f\"dataset size: {len(dataset)}\")\n",
     "print(dataset[randrange(len(dataset))])\n",
-    "# dataset size: 15011\n"
+    "# dataset size: 15011"
    ]
   },
   {
@@ -251,7 +268,7 @@
     "\n",
     "As mentioned in the beginning, we ran those example using a 8x NVIDIA A100 80GB. This means we can leverage `bf16`, which reduces the memory footprint of the model by almost ~2x, which allows us to train without offloading efficiently. We are going to use the [ds_falcon_180b_z3.json](./configs/ds_falcon_180b_z3.json). If you are irritated by the `auto` values, check the [documentation](https://huggingface.co/docs/transformers/v4.26.1/en/main_classes/deepspeed#configuration).\n",
     "\n",
-    "In addition to the deepspeed configuration we also need a training script, which implements LoRA and patches our model to use flash-attention. We created a [run_ds_lora.py](./scripts/run_ds_lora.py) script, which patches the falcon model using the [falcon_patch.py](./utils/falcon_patch.py) utils and implements LoRA using [peft_utils.py](./utils/peft_utils.py). \n",
+    "In addition to the deepspeed configuration we also need a training script, which implements LoRA and patches our model to use flash-attention. We created a [run_ds_lora.py](./run_ds_lora.py) script, which patches the falcon model using the [falcon_patch.py](./utils/falcon_patch.py) utils and implements LoRA using [peft_utils.py](./utils/peft_utils.py). \n",
     "\n",
     "> When you run make sure that you have the same folder structure and utils/configs available. The easiest way is to clone the whole repository. Go into the `training` directory and start the training.\n",
     "\n",
@@ -264,18 +281,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!torchrun --nproc_per_node 8 scripts/run_ds_lora.py \\\n",
+    "!torchrun --nproc_per_node 8 run_ds_lora.py \\\n",
     "  --model_id tiiuae/falcon-180B \\\n",
     "  --dataset_path dolly-processed \\\n",
     "  --output_dir falcon-180b-lora-fa \\\n",
-    "  --max_steps 200 \\\n",
-    "  --per_device_train_batch_size 2 \\\n",
-    "  --lr 4e-3 \\\n",
+    "  --num_train_epochs 3 \\\n",
+    "  --per_device_train_batch_size 1 \\\n",
+    "  --learning_rate 4e-3 \\\n",
     "  --gradient_checkpointing True \\\n",
+    "  --gradient_accumulation_steps 8 \\\n",
     "  --bf16 True \\\n",
     "  --tf32 True \\\n",
     "  --use_flash_attn True \\\n",
-    "  --lr_scheduler_type constant_with_warmup \\\n",
+    "  --lr_scheduler_type \"constant_with_warmup\" \\\n",
     "  --logging_steps 25 \\\n",
     "  --save_steps 100 \\\n",
     "  --save_total_limit 3 \\\n",
@@ -286,39 +304,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "cluster command"
+    "In our example for Falcon 180B, the SageMaker training job took `308 minutes` or ~5 hours for 1 epoch with merging the weights. For comparison the pretraining cost of Falcon 180B was ~7,000,000 GPU hours, which is 300,000 more than fine-tuning for 3 epochs.\n",
+    "\n",
+    "## Conclusion \n",
+    "\n",
+    "In the blog post you learn how to fine-tune  Falcon 180B model using DeepSpeed, Hugging Face Transformers, and LoRA with Flash Attention on a multi-GPU machine. We used: \n",
+    "\n",
+    "* DeepSpeed ZeRO for memory optimization, enabling training models with up to trillions of parameters on limited GPU memory. We used stage 3 (ZeRO-Infinity) to optimize memory usage.\n",
+    "* Hugging Face Transformers and Datasets for easily loading and preparing the text dataset as well as providing an intuitive Trainer API.\n",
+    "* LoRA, a method to efficiently fine-tune large language models by only updating a small percentage of parameters each iteration. This drastically reduces memory usage and computational costs.\n",
+    "* Flash Attention - a highly optimized attention implementation that further reduces the memory footprint.\n",
+    "\n",
+    "Compining all of those methods allows us to fine-tune LLMs with over 100B+ parameter with limited resources. The example provides a template for efficiently tuning the largest publicly available models."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!torchrun --nproc_per_node 8 scripts/run_ds_lora.py \\\n",
-    "  --model_id shared-falcon-180B/falcon-180B \\\n",
-    "  --dataset_path dolly-processed \\\n",
-    "  --output_dir falcon-180b-lora-fa \\\n",
-    "  --max_steps 200 \\\n",
-    "  --per_device_train_batch_size 2 \\\n",
-    "  --lr 4e-3 \\\n",
-    "  --gradient_checkpointing True \\\n",
-    "  --bf16 True \\\n",
-    "  --tf32 True \\\n",
-    "  --use_flash_attn True \\\n",
-    "  --lr_scheduler_type constant_with_warmup \\\n",
-    "  --logging_steps 25 \\\n",
-    "  --save_steps 100 \\\n",
-    "  --save_total_limit 3 \\\n",
-    "  --deepspeed configs/ds_falcon_180b_z3.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -342,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
