--- a/training/deepseed-falcon-180b-lora-fa.ipynb
+++ b/training/deepseed-falcon-180b-lora-fa.ipynb
@@ -304,7 +304,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our example for Falcon 180B, the SageMaker training job took `308 minutes` or ~5 hours for 1 epoch with merging the weights. For comparison the pretraining cost of Falcon 180B was ~7,000,000 GPU hours, which is 300,000 more than fine-tuning for 3 epochs.\n",
+    "_Note: Since we are using LoRA we are only saving the \"trained\" adapter weights, to save some storage. If you want to merge the adapters back into the base model and save the merged model you can add `--merge_adapters True` or use the [merge_adapter_weights.py](./scripts/merge_adapter_weights.py) script._\n",
+    "\n",
+    "In our example for Falcon 180B, the training time was `308 minutes` or ~5 hours for 1 epoch with merging the weights. For comparison the pretraining cost of Falcon 180B was ~7,000,000 GPU hours, which is 300,000 more than fine-tuning for 3 epochs.\n",
     "\n",
     "## Conclusion \n",
     "\n",
