--- a/training/deepseed-falcon-180b-lora-fa.ipynb
+++ b/training/deepseed-falcon-180b-lora-fa.ipynb
@@ -306,7 +306,7 @@
    "source": [
     "_Note: Since we are using LoRA we are only saving the \"trained\" adapter weights, to save some storage. If you want to merge the adapters back into the base model and save the merged model you can add `--merge_adapters True` or use the [merge_adapter_weights.py](./scripts/merge_adapter_weights.py) script._\n",
     "\n",
-    "In our example for Falcon 180B, the training time was `308 minutes` or ~5 hours for 1 epoch with merging the weights. For comparison the pretraining cost of Falcon 180B was ~7,000,000 GPU hours, which is 300,000 more than fine-tuning for 3 epochs.\n",
+    "In our example for Falcon 180B, the training time was `153 minutes` or ~2 hours for 3 epochs. For comparison the pretraining cost of Falcon 180B was ~7,000,000 GPU hours, which is 3,500,000 time more than fine-tuning.\n",
     "\n",
     "## Conclusion \n",
     "\n",
