added native flash attention

--- a/training/instruction-tune-llama-2-int4.ipynb
+++ b/training/instruction-tune-llama-2-int4.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"transformers==4.31.0\" \"datasets==2.13.0\" \"peft==0.4.0\" \"accelerate==0.21.0\" \"bitsandbytes==0.40.2\" \"trl==0.4.7\" \"safetensors>=0.3.1\" --upgrade"
+    "!pip install \"transformers==4.34.0\" \"datasets==2.13.0\" \"peft==0.4.0\" \"accelerate==0.23.0\" \"bitsandbytes==0.41.1\" \"trl==0.4.7\" \"safetensors>=0.3.1\" --upgrade"
    ]
   },
   {
@@ -223,7 +223,7 @@
     "\n",
     "_Installing flash attention can take quite a bit of time (10-45 minutes)._\n",
     "\n",
-    "The example supports the use of Flash Attention for all Llama checkpoints, but is not enabled by default. To use Flash Attention comment in the code block below wich says  `# COMMENT IN TO USE FLASH ATTENTION`.\n"
+    "The example supports the use of Flash Attention for all Llama checkpoints, but is not enabled by default. To use Flash Attention change the value of `use_flash_attentin` to `True`\n"
    ]
   },
   {
@@ -269,41 +269,30 @@
     "\n",
     "use_flash_attention = False\n",
     "\n",
-    "# COMMENT IN TO USE FLASH ATTENTION\n",
-    "# replace attention with flash attention \n",
-    "# if torch.cuda.get_device_capability()[0] >= 8:\n",
-    "#     from utils.llama_patch import replace_attn_with_flash_attn\n",
-    "#     print(\"Using flash attention\")\n",
-    "#     replace_attn_with_flash_attn()\n",
-    "#     use_flash_attention = True\n",
-    "\n",
-    "\n",
     "# Hugging Face model id\n",
-    "model_id = \"NousResearch/Llama-2-7b-hf\" # non-gated\n",
+    "model_id = \"NousResearch/Llama-2-7b-hf\"  # non-gated\n",
     "# model_id = \"meta-llama/Llama-2-7b-hf\" # gated\n",
     "\n",
     "\n",
-    "# BitsAndBytesConfig int-4 config \n",
+    "# BitsAndBytesConfig int-4 config\n",
     "bnb_config = BitsAndBytesConfig(\n",
-    "    load_in_4bit=True,\n",
-    "    bnb_4bit_use_double_quant=True,\n",
-    "    bnb_4bit_quant_type=\"nf4\",\n",
-    "    bnb_4bit_compute_dtype=torch.bfloat16\n",
+    "    load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.bfloat16\n",
     ")\n",
     "\n",
     "# Load model and tokenizer\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, use_cache=False, device_map=\"auto\")\n",
-    "model.config.pretraining_tp = 1 \n",
-    "\n",
-    "# Validate that the model is using flash attention, by comparing doc strings\n",
-    "if use_flash_attention:\n",
-    "    from utils.llama_patch import forward    \n",
-    "    assert model.model.layers[0].self_attn.forward.__doc__ == forward.__doc__, \"Model is not using flash attention\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_id,\n",
+    "    quantization_config=bnb_config,\n",
+    "    use_cache=False,\n",
+    "    use_flash_attention_2=use_flash_attention,\n",
+    "    device_map=\"auto\",\n",
+    ")\n",
+    "model.config.pretraining_tp = 1\n",
     "\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"right\""
+    "tokenizer.padding_side = \"right\"\n"
    ]
   },
   {
