--- a/training/fine-tune-llms-in-2024-with-trl.ipynb
+++ b/training/fine-tune-llms-in-2024-with-trl.ipynb
@@ -506,8 +506,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='11' max='153' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 11/153 04:08 < 1:05:16, 0.04 it/s, Epoch 0.20/3]\n",
+       "      <progress value='17' max='153' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 17/153 06:53 < 1:02:30, 0.04 it/s, Epoch 0.31/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -517,6 +517,10 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>1.113600</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -529,11 +533,8 @@
     }
    ],
    "source": [
-    "# train\n",
-    "trainer.train() # there will not be a progress bar since tqdm is disabled\n",
-    "\n",
-    "# save model\n",
-    "trainer.save_model()"
+    "# start training, the model will be automatically saved to the hub and the output directory\n",
+    "trainer.train()"
    ]
   },
   {
